# phantom-enum

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  phantom_enum.rs
